<resources>
    <string name="app_name">E-Worker</string>
    <string name="app_description">Labour Management App</string>
    <string name="WelcomeBack">Hello there, Welcome Back</string>
    <string name="SignIn">Sign In to continue</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Forget">Forget Password?</string>
    <string name="Go">Go</string>
    <string name="Welcome">Welcome</string>
    <string name="NewUser">New User? SIGN UP</string>
    <string name="FullName">Full Name</string>
    <string name="Email">Email</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="AlreadyHaveAccount">Already have an account? Login</string>
    <string name="StartYourJourney">SignUp to start your Journey</string>
    <string name="todo">TODO</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="Verify">Verify</string>
    <string name="Update">Update</string>
</resources>