<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyPhoneNo"
    android:orientation="vertical">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/day"
        android:contentDescription="@string/todo"
        android:transitionName="logo_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:transitionName="logo_text"
        android:textSize="40sp"
        android:fontFamily="@font/bangers"
        android:layout_marginTop="-20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:orientation="vertical"
        android:layout_marginTop="120dp">
        <EditText
            android:id="@+id/verification_code_entered_by_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterOTP"/>
        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Verify"
            android:layout_marginTop="20dp"
            android:background="#FFF"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>